added index.html to index.php, redid tabs

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		
 			<div class="header">
 				<h1>CPSC 332 Database Project</h1>
-				<h2>By Danah Mohammad, Javier Canedo, and Ashley Thorlin</h2>
+				<h2>By Javier Canedo, Danah Mohammad, and Ashley Thorlin</h2>
 			</div>
 			
 			<div class="tab">
